# PladooDraw_Direct2D_LayerSystem

./: .gitignore  PladooDraw_Direct2D_LayerSystem.sln  README.md
Docs/: API_Documentation.md  Global_Variables_Documentation.md  Readme.md  Tool_IDs_Documentation.md  Workflow_Guide.md
PladooDraw_Direct2D_LayerSystem/: Actions.cpp  Actions.h  Animation.cpp  Animation.h  Base.h  CMakeLists.txt  Constants.cpp  Constants.h  Helpers.cpp  Helpers.h  Layers.cpp  Layers.h  LayersDLL.cpp  LayersDLL.h  Main.cpp  Main.h  PladooDraw.cpp  PladooDraw.h  PladooDraw_Direct2D_LayerSystem.vcxproj  PladooDraw_Direct2D_LayerSystem.vcxproj.filters  Render.cpp  Render.h  Replay.cpp  Replay.h  SaveLoad.cpp  SaveLoad.h  Structs.h  SurfaceDial.cpp  SurfaceDial.h  SvgExporter.cpp  SvgExporter.h  Tools.cpp  Tools.h  ToolsAux.cpp  ToolsAux.h  TransformProperty.cpp  TransformProperty.h  Transforms.cpp  Transforms.h
